syntax = "proto3";

package gamepb.taskpb;

import "corepb.proto";

// ============ 单个任务 ============
message Task {
    int64 id = 1;
    int64 progress = 2;
    bool is_claimed = 3;
    bool is_unlocked = 4;
    repeated corepb.Item rewards = 5;
    int64 total_progress = 6;
    int64 share_multiple = 7;
    repeated string params = 8;
    string desc = 9;
    int32 task_type = 10;
    int64 group = 11;
    int64 cond_type = 12;
    int64 is_show_text = 13;
}

// ============ 活跃度奖励 ============
message Active {
    int64 id = 1;
    int32 status = 2;
    repeated corepb.Item items = 3;
}

// ============ 任务信息汇总 ============
message TaskInfo {
    repeated Task growth_tasks = 1;
    repeated Task daily_tasks = 2;
    repeated Task tasks = 3;
    repeated Active actives = 4;
}

// ============ 请求/回复 ============

message TaskInfoRequest {}

message TaskInfoReply {
    TaskInfo task_info = 1;
}

message ClaimTaskRewardRequest {
    int64 id = 1;
    bool do_shared = 2;
}

message ClaimTaskRewardReply {
    repeated corepb.Item items = 1;
    TaskInfo task_info = 2;
    repeated corepb.Item compensated_items = 3;
}

message BatchClaimTaskRewardRequest {
    repeated int64 ids = 1;
    bool do_shared = 2;
}

message BatchClaimTaskRewardReply {
    repeated corepb.Item items = 1;
    TaskInfo task_info = 2;
    repeated corepb.Item compensated_items = 3;
}

// ============ 服务器推送 ============

message TaskInfoNotify {
    TaskInfo task_info = 1;
}
